Started to work on the index page

--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -8,9 +8,15 @@
 
   cb-header {
     grid-area: header;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+    height: 50px;
   }
 
   .content {
     grid-area: content;
+    overflow: scroll;
   }
 }
