--- a/Frontend/src/app/views/index/index.component.scss
+++ b/Frontend/src/app/views/index/index.component.scss
@@ -19,7 +19,17 @@
       justify-content: center;
       align-items: center;
 
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 90% 95%, 10% 95%, 0 100%);
+      /* clip-path: polygon(
+        0 0,
+        100% 0,
+        100% 100%,
+        90% 90%,
+        60% 90%,
+        50% 100%,
+        40% 90%,
+        10% 90%,
+        0 100%
+      ); */
 
       h1,
       h2 {
@@ -40,6 +50,13 @@
         font-weight: lighter;
       }
 
+      .index-jumbotron-scrollDownButton {
+        color: $primary;
+        position: absolute;
+        bottom: 30px;
+        cursor: pointer;
+      }
+
       .index-jumbotron-overlay {
         background: radial-gradient(
           circle,
@@ -50,6 +67,40 @@
         height: 100%;
         position: absolute;
         top: 0;
+      }
+    }
+
+    .index-into {
+      height: 400px;
+      width: 100%;
+      /* margin-top: -40px; */
+      padding: 40px 60px;
+
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+
+      background: repeating-linear-gradient(
+        45deg,
+        #f3f3f3,
+        #f3f3f3 40px,
+        #e9e9e9 40px,
+        #e9e9e9 80px
+      );
+
+      h1 {
+        font-size: 2rem;
+        color: $primary;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+      }
+
+      p {
+        font-size: 1.2rem;
+
+        span {
+          color: $primary;
+          font-weight: bolder;
+        }
       }
     }
   }
