--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -14,6 +14,10 @@ body {
   font-family: 'Roboto', 'Open Sans', sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 /*
   Global element styles
 */
