Cleaned up markup/style

--- a/Frontend/src/app/components/header/header.component.html
+++ b/Frontend/src/app/components/header/header.component.html
@@ -5,10 +5,8 @@
   </div>
 
   <div class="cb-header-navigation">
-    <div class="cb-header-navigation-item cb-header-navigation-item-primary">
-      Create Codebook
-    </div>
-    <div class="cb-header-navigation-item" routerLink="about">About</div>
-    <a class="cb-header-navigation-item" href="https://github.com/roulzhq/Codebook" rel="noopener" target="_blank">View on GitHub</a>
+    <div class="cb-header-navigation-item" routerLink="dashboard">Dashboard</div>
+    <div class="cb-header-navigation-item" routerLink="codebooks">My Codebooks</div>
+    <div class="cb-header-navigation-item" routerLink="data">My Data</div>
   </div>
 </div>
