--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -30,3 +30,12 @@ a {
   color: $link;
   text-decoration: none;
 }
+
+/*
+  Global classes!
+*/
+
+// Used for the top-level class of every view
+.view {
+  padding: 20px;
+}
