--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -8,14 +8,9 @@
 
   cb-header {
     grid-area: header;
-    position: fixed;
-    top: 0;
-    z-index: 100;
-    width: 100%;
-    height: 50px;
   }
 
-  .content {
+  #content {
     grid-area: content;
     overflow: scroll;
   }
