--- a/Frontend/src/variables.scss
+++ b/Frontend/src/variables.scss
@@ -1,6 +1,8 @@
 // Interactive colors
 $primary: #01a3a4;
 $primary-accent: #00d2d3;
+$primary-disabled: #346d6d;
+
 $secondary: #341f97;
 $secondary-accent: #5f27cd;
 
@@ -16,5 +18,8 @@ $link: #54a0ff;
 // Backgrounds
 $dark: #222f3e;
 $dark-accent: #576574;
+
+$grey: #f8f8f8;
+
 $light: #f5f6fa;
-$error-accent: #fafafa;
+$light-accent: #fafafa;
