--- a/Frontend/src/app/views/auth/auth.component.html
+++ b/Frontend/src/app/views/auth/auth.component.html
@@ -1,5 +1,6 @@
 <div class="view">
   <form [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()" class="loginForm">
+    <h1>Codebook - Login</h1>
     <label>
       Email
       <input
