--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -1,6 +1,9 @@
+@import '~ngx-toastr/toastr';
 @import '~normalize.css';
+
 @import '~src/variables.scss';
 @import '~src/mixins.scss';
+
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');
 
