--- a/Frontend/src/variables.scss
+++ b/Frontend/src/variables.scss
@@ -1,7 +1,7 @@
 // Interactive colors
 $primary: #01a3a4;
 $primary-accent: #00d2d3;
-$primary-disabled: #346d6d;
+$primary-disabled: #536868;
 
 $secondary: #341f97;
 $secondary-accent: #5f27cd;
