--- a/src/app/components/codebook-cell/codebook-cell.component.html
+++ b/src/app/components/codebook-cell/codebook-cell.component.html
@@ -1,7 +1,8 @@
 <div class="cell">
   <div class="lines">
-    <div class="line" *ngFor="let line of cell.lines">
-      {{ line }}
-    </div>
+    <ngx-monaco-editor
+      [options]="editorOptions"
+      [(ngModel)]="content"
+    ></ngx-monaco-editor>
   </div>
 </div>
