Continued working on cells/codebooks

--- a/src/app/views/codebook/codebook.component.html
+++ b/src/app/views/codebook/codebook.component.html
@@ -10,6 +10,7 @@
         <codebook-cell
           *ngFor="let cell of cells$ | async"
           [data]="cell"
+          (dataChange)="onCellDataChanged($event, cell.id)"
         ></codebook-cell>
       </div>
     </div>
