--- a/src/app/components/codebook-cell/codebook-cell.component.html
+++ b/src/app/components/codebook-cell/codebook-cell.component.html
@@ -2,7 +2,8 @@
   <div class="lines">
     <ngx-monaco-editor
       [options]="editorOptions"
-      [(ngModel)]="content"
+      [(ngModel)]="cellContent"
+      (ngModelChange)="onCellContentChanged($event)"
     ></ngx-monaco-editor>
   </div>
 </div>
