Minor updates to codebook cell

--- a/src/app/components/codebook-cell/codebook-cell.component.html
+++ b/src/app/components/codebook-cell/codebook-cell.component.html
@@ -2,7 +2,7 @@
   <div class="lines">
     <ngx-monaco-editor
       [options]="editorOptions"
-      [(ngModel)]="cellContent"
+      [ngModel]="cellContent"
       (ngModelChange)="onCellContentChanged($event)"
     ></ngx-monaco-editor>
   </div>
