Added trackBy for codebook cells loop (ngFor)

--- a/src/app/views/codebook/codebook.component.html
+++ b/src/app/views/codebook/codebook.component.html
@@ -8,7 +8,7 @@
     <div class="codebook-content">
       <div class="codebook-cells">
         <codebook-cell
-          *ngFor="let cell of cells$ | async"
+          *ngFor="let cell of cells$ | async; trackBy: codebookTrackByFunction"
           [data]="cell"
           (dataChange)="onCellDataChanged($event, cell.id)"
         ></codebook-cell>
