--- a/src/app/views/codebook/codebook.component.scss
+++ b/src/app/views/codebook/codebook.component.scss
@@ -5,13 +5,13 @@
     .codebook {
       .codebook-head {
         .codebook-title {
-          margin: 0;
+          margin: 0 0 40px 0;
         }
       }
 
       .codebook-content {
         .codebook-cells {
-          border: 1px dotted $primary;
+          
         }
       }
     }
