Fixed small problem with the cell resize handler

--- a/src/app/codebook/components/codebook-cell/codebook-cell.component.html
+++ b/src/app/codebook/components/codebook-cell/codebook-cell.component.html
@@ -5,7 +5,7 @@
       [ngModel]="cellContent"
       (ngModelChange)="onCellContentChanged($event)"
       class="cell-input-editor"
-      [style.height.px]="cell.height"
+      [style.height.px]="cell.height - 10"
     ></ngx-monaco-editor>
   </div>
 
