--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -46,15 +46,13 @@
 
         transition: 0.2s all ease-in-out;
 
-        border-bottom: 0px solid transparent;
-
         &:hover {
           background-color: $dark-accent;
         }
       }
 
       .cb-header-navigation-item-active {
-        border-bottom: 3px solid $primary;
+        box-shadow: inset 0px -3px 0px 0px $primary;
       }
 
       .cb-header-navigation-item-primary {
@@ -85,7 +83,7 @@
           background-color: $dark;
 
           @include box-shadow-2();
-          
+
           .cb-header-user-dropdown-item {
             display: flex;
             justify-content: space-between;
@@ -105,6 +103,30 @@
         &:hover .cb-header-user-dropdown {
           display: block;
           opacity: 1;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 580px) {
+    .cb-header {
+      .cb-header-title {
+        font-size: 1.4rem;
+
+        .cb-header-title-badge {
+          display: none;
+        }
+      }
+
+      .cb-header-navigation {
+        margin: 0 10px 0 0;
+
+        .cb-header-navigation-item {
+          font-size: 0.8rem;
+        }
+
+        .cb-header-user {
+          margin-left: 0;
         }
       }
     }
