Made auth dialog mobile friendly

--- a/src/app/views/auth/auth.component.scss
+++ b/src/app/views/auth/auth.component.scss
@@ -46,4 +46,20 @@
       }
     }
   }
+
+  @media screen and (max-width: 1145px) {
+    .view {
+      .loginForm {
+        width: 60%;
+      }
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .view {
+      .loginForm {
+        width: 90%;
+      }
+    }
+  }
 }
