--- a/src/app/codebook/views/codebook-detail/codebook-detail.component.html
+++ b/src/app/codebook/views/codebook-detail/codebook-detail.component.html
@@ -1,19 +1,39 @@
 <div class="view">
-    <div class="codebook" *ngIf="codebook$ | async as codebook">
-      <div class="codebook-head">
-        <h1 class="codebook-title">
+  <div class="codebook" *ngIf="codebook$ | async as codebook">
+    <div class="sidemenu">
+      <codebook-sidemenu></codebook-sidemenu>
+    </div>
+
+    <div class="codebook-head">
+      <h1 class="codebook-title">
+        <span *ngIf="!titleEditModeActive; else titleEdit">
           {{ codebook.title }}
-        </h1>
-      </div>
-      <div class="codebook-content">
-        <div class="codebook-cells">
-          <codebook-cell
-            *ngFor="let cell of cells$ | async; trackBy: codebookTrackByFunction"
-            [data]="cell"
-            (dataChange)="onCellDataChanged($event, cell.id)"
-          ></codebook-cell>
-        </div>
+        </span>
+        <ng-template #titleEdit>
+          <input
+            type="text"
+            name="titleEdit"
+            id="titleEdit"
+            [(ngModel)]="titleEditText"
+            (keyup.enter)="onTitleEditButtonClick(true)"
+          />
+        </ng-template>
+        <span
+          (click)="onTitleEditButtonClick(!titleEditModeActive ? false : null)"
+          class="codebook-title-editButton"
+          ><fa-icon [icon]="faEdit"></fa-icon
+        ></span>
+      </h1>
+    </div>
+    <div class="codebook-content">
+      <div class="codebook-cells">
+        <codebook-cell
+          *ngFor="let cell of cells$ | async; trackBy: codebookTrackByFunction"
+          [data]="cell"
+          (dataChange)="onCellDataChanged($event, cell.id)"
+          class="codebook-cell"
+        ></codebook-cell>
       </div>
     </div>
   </div>
-  
+</div>
