--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,6 +79,8 @@ button[type=submit] {
 // Used for the top-level class of every view
 .view {
   padding: 40px 20px;
+  height: 100%;
+  overflow: hidden;
 }
 
 /*
