Started using VM architecture for code execution

--- a/src/app/codebook/components/codebook-cell/codebook-cell.component.html
+++ b/src/app/codebook/components/codebook-cell/codebook-cell.component.html
@@ -6,7 +6,7 @@
   >
     <ngx-monaco-editor
       [options]="editorOptions"
-      [ngModel]="cellContent"
+      [ngModel]="cell.data"
       (ngModelChange)="onCellContentChanged($event)"
       class="cell-input-editor"
       [style.height.px]="cell.height - 10"
